   
Known Bugs

   o	Handling of initial conditions for the state space filter and smoother 
	still needs work.

Changes in dse version 2011.11-1

   o	updated maintainer email address.

Changes in dse version 2011.3-1

   o	Changed periods() and tfperiods() to Tobs() to be consistent with
   	changes in tframe.

Changes in dse version 2009.12-1

   o	fixed reference to ts in error messages (now stats).

   o	Additional documentation clean-up.


Changes in dse version 2009.10-2

   o	Standardized NEWS format for new function news().

   o	Fixed a few documentation problems found by R-2.10.0 (beta) quality checks.


Changes in dse version  2009.10-1

   o	The dse bundle has been unbundled and the packages dse1 and dse2 renamed 
    	to dse and EvalEst respectively.  Some additional reorganization has 
	been done to give a slightly different focus to the second package. 
	Stub packages dse1 and dse2 have been created to facilitate conversion 
	for users' existing code. These stub packages simply require dse 
	and EvalEst respectively.
    
   o	The renaming has not been done in the NEWS files below.

 
Changes in dse version 2009.7-1

   o	minor documentation corrections as found by a new R-devel.


Changes in dse version 2008.10-1

   o	Changed the way a default graphics device is opened in a test, because
	of a change in R . 

   o	Some documentation cleanup related to previous changes. 

Changes in dse version 2007.11-1

   o	GPL-2 license option was added explicitely. 

   o	Function mineStepwise and method plot.mineStepwise were removed. 
	It used stepwise and probably has not worked in a long time.

Changes in dse version 2007.7-1

   o	fixed a bug passing data to dse1 fortran arma code when the input data was
	longer than the output data. This especially affected forecast() in dse2.

   o	fixed a bug passing data to dse1 fortran kf code as with arma.

   o	fixed a bug in l.ARMA which caused an error when predictT exceeded 
	sampleT and compiled=FALSE.
