@@ -1,5 +1,4 @@
-.onLoad  <- function(library, section) {
-   require("dse")
-   warning("Package dse1 is deprecated. Please use package dse instead.")
+.onAttach  <- function(libname, pkgname) {
+   packageStartupMessage("Package dse1 is deprecated. Please use package dse instead.")
    invisible(TRUE)
    }
