@@ -6,7 +6,7 @@
 
 \title{Transition Package from dse Bundle to dse Package.}
 
-\description{Package to add transition from dse Bundle to dse package.
+\description{Package to aid transition from dse Bundle to dse package.
 }
 
 \section{Usage}{
@@ -15,6 +15,6 @@
 
 \details{
 The only purpose of this package is to prevent breaking older code that loads 
-package dse1 from the old dse bundle. This package dse1 simple requires package
-dse.
+package dse1 from the old dse bundle. This package dse1 simply depends on
+package dse, so dse is loaded.
 }
