@@ -6,7 +6,7 @@
 
 \title{Transition Package from dse Bundle to EvalEst Package.}
 
-\description{Package to add transition from dse Bundle to EvalEst package.
+\description{Package to aid transition from dse Bundle to EvalEst package.
 }
 
 \section{Usage}{
@@ -15,6 +15,6 @@
 
 \details{
 The only purpose of this package is to prevent breaking older code that loads 
-package dse2 from the old dse bundle. This package dse2 simple requires package
-EvalEst.
+package dse2 from the old dse bundle. This package dse2 simple depends on
+package EvalEst, so dse and  EvalEst are loaded.
 }
