@@ -2,6 +2,12 @@ Changes in dse1 version 2011.11-1
 
    o	updated maintainer email address.
 
+   o	switched .onLoad to .onAttach and removed require("dse") as that
+   	should be handled by Depends in DESCRIPTION file.
+
+   o	Fixed partial matching of "F" to "F." generating note in recent
+   	package checks.
+
 dse1  version 2009.10-1
 
    o  Package dse1 in the dse discontinued bundle has been replaced by package 
