@@ -2,6 +2,9 @@ Changes in dse2 version 2011.11-1
 
    o	updated maintainer email address.
 
+   o	switched .onLoad to .onAttach and removed require("EvalEst") as that
+   	should be handled by Depends in DESCRIPTION file.
+
 dse2  version 2009.10-1
 
    o  Package dse2 in the dse discontinued bundle has been replaced by packages 
