@@ -13,6 +13,9 @@ Changes in dse version 2011.3-1
    o	Changed periods() and tfperiods() to Tobs() to be consistent with
    	changes in tframe.
 
+   o	switched .onLoad to .onAttach and removed require("tframe") as that
+   	should be handled by Depends in DESCRIPTION file.
+
 Changes in dse version 2009.12-1
 
    o	fixed reference to ts in error messages (now stats).
